add-content-button dynamic hover and tooltip

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -48,8 +48,8 @@ video {
     width: 100%;
 }
 
-/* .uk-navbar-container{
-    background-color: #000022;
+/* #navbar{
+    
 } */
 
 .library-links {
